--- a/MembersPanel/assets/css/style.css
+++ b/MembersPanel/assets/css/style.css
@@ -4893,7 +4893,7 @@ blockquote p {
 			font-size: 18px;
 			padding-top: 0.8px;
 			border-top: 1px solid grey;
-			
+			text-align: center;
 			
 		}
 
