--- a/MembersPanel/assets/css/style.css
+++ b/MembersPanel/assets/css/style.css
@@ -4903,5 +4903,34 @@ blockquote p {
 
 	   }
 
+	   @media (min-width: 575px) {
+
+		#footerbarcoordinator{
+			display: none;
+		}
+
+	   }
+
+	   @media (max-width: 575px) {
+
+		#footerbarcoordinator{
+			background-color: #03b1fc;
+			height: 48px;
+			position: fixed;
+			bottom: 0;
+			font-size: 18px;
+			padding-top: 0.8px;
+			border-top: 1px solid grey;
+			text-align: center;
+			
+		}
+
+		#footerbarcoordinator a{
+			color: white;
+			
+		}
+
+	   }
+
 
 
