--- a/MembersPanel/assets/css/style.css
+++ b/MembersPanel/assets/css/style.css
@@ -809,10 +809,10 @@ textarea.form-control {
   padding: 0 20px;
 }
 .sidebar-menu li a:hover {
-  color: #198754;
+  color: rgb(53, 53, 53);
 }
 .sidebar-menu li.active a {
-  color: #198754;
+  color: rgb(53, 53, 53);
   background-color: #f3f3f3;
 }
 .menu-title {
@@ -4905,7 +4905,7 @@ blockquote p {
 
 @media (max-width: 575px) {
   #footerbar {
-    background-color: #198754;
+    background-color: rgb(53, 53, 53);
     height: 48px;
     position: fixed;
     bottom: 0;
@@ -4928,7 +4928,7 @@ blockquote p {
 
 @media (max-width: 575px) {
   #footerbarcoordinator {
-    background-color: #03b1fc;
+    background-color: rgb(53, 53, 53);
     height: 48px;
     position: fixed;
     bottom: 0;
